# rug-architectures-of-intelligence

./: A1-adding-trace.md  A1-tutor-model.lisp  README.md  add-digits.txt  addition.lisp  broken-addition.lisp  count.tcl  devenv.nix  lab1.tcl  notes.md  repaired-addition.lisp  tutor-model.lisp  util.py
assignment1/: A1-adding-trace.txt  add-digits.txt  count.tcl  lab1.tcl  repaired-addition.lisp  util.py
assignment1/submission/: A1-tutor-model.lisp
assignment2/: README.md  outcomes.md  plot.ipynb  subitize-model copy.lisp  subitize-model.lisp
assignment3/: README.md  report.md  tuning.md  tuning_tmp.html  usage.md  zbrodoff-model.lisp
assignment3/submittion 2/: zbrodoff-model.lisp
assignment4/: 1hit-blackjack-model.lisp  mental-steps.md  report.md  todo.md  trace.md  usage.md
assignment4/submission/: 1hit-blackjack-model.lisp
assignment5/: nengo_in_python_AB.py  part1_0.py  part1_0.py.cfg  part1_1.py  part1_1.py.cfg  pyproject.toml  report.md  report_final.md  report_part1.md  report_part2.md  usage.md
assignment5/submission/: part1.py
assignment6/: assoc_mem_acc.py  compare_acc_zbrodoff.py  pyproject.toml  usage.md  zbrodoff_retrieve.py  zbrodoff_retrieve.py.cfg
assignment7/: README.md  learning_assignment7.py  learning_assignment7.py.cfg  learning_assignment7_1a.py  learning_assignment7_1b.py  learning_assignment7_1b.py.cfg  learning_assignment7_2a.py  learning_assignment7_2b.py  learning_assignment7_2b.py.cfg  learning_assignment7_2c.py  learning_assignment7_2c.py.cfg  notes.md  pyproject.toml
assignment7/submission/: learning_assignment7_2c.py
(+3 files in other folders)
