[tool.poetry]
name = "assignment7"
version = "0.1.0"
description = ""
authors = ["put101 <tobiaspucher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nengo = "^4.0.0"
nengo-gui = "^0.5.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
